--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,10 @@ jobs:
         go-version: 1.19
     
     - name: Build-Database
-      run: docker-compose build
+      run: docker-compose --project-directory ./ci-github-actions/ build
 
     - name: Create-Database
-      run: docker-compose up -d
+      run: docker-compose --project-directory ./ci-github-actions/ up -d
       
     - name: Test
       run: go test -v ./ci-github-actions/main_test.go
